--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -53,7 +53,7 @@ UI.Updater.Menu.Channel="채널 업데이트"
 UI.Updater.Menu.Channel.Stable="안정 버전"
 UI.Updater.Menu.Channel.Candidate="후보"
 UI.Updater.Menu.Channel.Beta="베타"
-UI.Updater.Menu.Channel.Alpha="투명도"
+UI.Updater.Menu.Channel.Alpha="알파"
 
 Encoder.AOM.AV1="AOM AV1 (다이렉트)"
 Encoder.AOM.AV1.Encoder="인코더"
